--- a/index.html
+++ b/index.html
@@ -201,5 +201,8 @@
 
     <!--===== MAIN JS =====-->
     <script src="assets/js/main.js"></script>
+
+    <!-- Main CSS -->
+    <link rel="stylesheet" href="assets/css/styles.css" />
   </body>
 </html>
