--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
     <link rel="stylesheet" href="assets/css/swiper-bundle.min.css" />
     <link rel="stylesheet" href="assets/js/main.js" />
 
+    <!-- Boxicons CSS -->
+    <link href="https://unpkg.com/boxicons@2.1.2/css/boxicons.min.css" rel="stylesheet" />
+
     <!-- =====BOX ICONS===== -->
     <link href="https://cdn.jsdelivr.net/npm/boxicons@2.0.5/css/boxicons.min.css" rel="stylesheet" />
 
@@ -110,6 +113,7 @@
                 <span class="skills__percentage">85%</span>
               </div>
             </div>
+
             <div class="skills__data">
               <div class="skills__names">
                 <i class="bx bxl-css3 skills__icon"></i>
@@ -120,6 +124,7 @@
                 <span class="skills__percentage">75%</span>
               </div>
             </div>
+
             <div class="skills__data">
               <div class="skills__names">
                 <i class="bx bxl-javascript skills__icon"></i>
@@ -130,6 +135,7 @@
                 <span class="skills__percentage">65%</span>
               </div>
             </div>
+
             <div class="skills__data">
               <div class="skills__names">
                 <i class="bx bxs-paint skills__icon"></i>
@@ -138,6 +144,28 @@
               <div class="skills__bar skills__ux"></div>
               <div>
                 <span class="skills__percentage">70%</span>
+              </div>
+            </div>
+
+            <div class="skills__data">
+              <div class="skills__names">
+                <i class="bx bxl-bootstrap skills__icon"></i>
+                <span class="skills__name">Bootstrap</span>
+              </div>
+              <div class="skills__bar skills__bootstrap"></div>
+              <div>
+                <span class="skills__percentage">80%</span>
+              </div>
+            </div>
+
+            <div class="skills__data">
+              <div class="skills__names">
+                <i class="bx bxl-python skills__icon"></i>
+                <span class="skills__name">Python</span>
+              </div>
+              <div class="skills__bar skills__python"></div>
+              <div>
+                <span class="skills__percentage">65%</span>
               </div>
             </div>
           </div>
