--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
           <form action="" class="contact__form" name="submit-to-google-sheet">
             <input type="text" placeholder="Name" class="contact__input" id="name" aria-describedby="name" name="name" required />
             <input type="mail" placeholder="Email" class="contact__input" id="email" aria-describedby="email" name="email" required />
-            <textarea placeholder="Message" cols="0" rows="3" class="contact__input" id="message" required></textarea>
+            <textarea placeholder="Message" cols="0" rows="3" class="contact__input" id="message" name="message" required></textarea>
             <button type="submit" class="btn btn-success btn-send contact__input">Send</button>
 
             <button class="btn btn-success btn-loading d-none" type="button" disabled>
